--- a/ResponsiveWebDesign/CSS_ColorMarkers/styles.css
+++ b/ResponsiveWebDesign/CSS_ColorMarkers/styles.css
@@ -1,3 +1,11 @@
+/* In the additive RGB color model, primary colors are colors that, when combined, create pure white. */
+
+/* Secondary colors are the colors you get when you combine primary colors. */
+
+/* Tertiary colors are created by combining a primary with a nearby secondary color. */
+
+/* There are three more tertiary colors: chartreuse green (green + yellow), azure (blue + cyan), and rose (red + magenta). */
+
 h1 {
     text-align: center;
 }
@@ -21,7 +29,7 @@ h1 {
 .sleeve {
     width: 110px;
     height: 25px;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.5); /* The `a` channel stands for "alpha", it determines opacity a.k.a. see-throughness.*/
     border-left: 10px double rgba(0, 0, 0, 0.75);
 }
 
@@ -30,17 +38,73 @@ h1 {
     display: inline-block;
 }
 
+
+/*
+You've learned a few ways to set flat colors in CSS, but you can also use a color transition, or gradient, on an element.
+
+A gradient is when one color transitions into another. The CSS linear-gradient function lets you control the direction of the transition along a line, and which colors are used.
+
+One thing to remember is that the linear-gradient function actually creates an image element, and is usually paired with the background property which can accept an image as a value.
+*/
+
+/*
+The linear-gradient function is very flexible -- here is the basic syntax you'll use in this tutorial:
+
+`linear-gradient(gradientDirection, color1, color2, ...);`
+
+gradientDirection is the direction of the line used for the transition. color1 and color2 are color arguments, which are the colors that will be used in the transition itself. These can be any type of color, including color keywords, hex, rgb, or hsl.
+
+Now you'll apply a red-to-green gradient along a 90 degree line to the first marker.
+*/
+
+/*
+Color-stops allow you to fine-tune where colors are placed along the gradient line. They are a length unit like px or percentages that follow a color in the linear-gradient function.
+
+For example, in this red-black gradient, the transition from red to black takes place at the 90% point along the gradient line, so red takes up most of the available space:
+
+linear-gradient(90deg, red 90%, black);
+*/
+
+
+/*
+The CSS rgb function accepts values, or arguments, for red, green, and blue, and produces a color:
+
+`rgb(red, green, blue);`
+
+Each red, green, and blue value is a number from 0 to 255. 0 means that there's 0% of that color, and is black. 255 means that there's 100% of that color.
+*/
 .red {
     background: linear-gradient(rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
     box-shadow: 0 0 20px 0 rgba(83, 14, 14, 0.8);
 }
 
+/*
+A very common way to apply color to an element with CSS is with hexadecimal or hex values. While hex values sound complicated, they're really just another form of RGB values.
+
+Hex color values start with a # character and take six characters from 0-9 and A-F. The first pair of characters represent red, the second pair represent green, and the third pair represent blue. For example, #4B5320.
+*/
 .green {
     background: linear-gradient(#55680D, #71F53E, #116C31);
     box-shadow: 0 0 20px 0 #3B7E20CC;
 }
 
+/*
+The HSL color model, or hue, saturation, and lightness, is another way to represent colors.
+
+The CSS hsl function accepts 3 values: a number from 0 to 360 for hue, a percentage from 0 to 100 for saturation, and a percentage from 0 to 100 for lightness.
+
+If you imagine a color wheel, the hue red is at 0 degrees, green is at 120 degrees, and blue is at 240 degrees.
+
+Saturation is the intensity of a color from 0%, or gray, to 100% for pure color. You must add the percent sign % to the saturation and lightness values.
+
+Lightness is how bright a color appears, from 0%, or complete black, to 100%, complete white, with 50% being neutral.
+*/
 .blue {
     background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
     box-shadow: 0 0 20px 0 hsla(223, 59%, 31%, 0.8);
 }
+/*
+A color wheel is a circle where similar colors, or hues, are near each other, and different ones are further apart. For example, pure red is between the hues rose and orange.
+
+Two colors that are opposite from each other on the color wheel are called complementary colors. If two complementary colors are combined, they produce gray. But when they are placed side-by-side, these colors produce strong visual contrast and appear brighter.
+*/
