Add Deno configuration and initial JavaScript files

--- a/ResponsiveWebDesign/CSS_Variables/styles.css
+++ b/ResponsiveWebDesign/CSS_Variables/styles.css
@@ -1,3 +1,12 @@
+/*Variable declarations begin with two dashes (-) and
+are given a name and a value like this: `--variable-name: value;`*/
+
+/*To use a variable, put the variable name in parentheses with
+`var` in front of them like this: `var(--variable-name)`*/
+
+/*variables are often declared in the :root selector.
+This is the highest level selector in CSS;
+putting your variables there will make them usable everywhere.*/
 :root {
 	--building-color1: #aa80ff;
 	--building-color2: #66cc99;
@@ -14,10 +23,18 @@
 }
 
 body {
+
+	/*Makes the body fill the whole viewport*/
 	height: 100vh;
 	margin: 0;
+	
+	/*setting the overflow property to hidden
+	hides any scroll bars that appear when something extends past the viewport*/
 	overflow: hidden;
 }
+
+/*Setting a property to a percentage value
+makes it that much part of its direct parent*/
 
 .background-buildings, .foreground-buildings {
 	width: 100%;
@@ -72,10 +89,33 @@ body {
 .bb1d {
 	width: 100%;
 	height: 70%;
+
+	/*
+	Gradients in CSS are a way to transition between colors across the distance of an element.
+	They are applied to the background property
+
+	the syntax looks like this:
+		`gradient-type(color1, color2);`
+
+	In the example, color1 is solid at the top, color2 is solid at the bottom,
+	and in between it transitions evenly from one to the next.
+	*/
 	background: linear-gradient(
 			var(--building-color1) 50%,
 			var(--window-color1)
 		);
+	/*
+	You can specify where you want a gradient transition to complete by adding it to the color like this:
+		```
+		gradient-type(
+			color1,
+			color2 20%,
+			color3
+		);
+		```
+	Here, it will transition from `color1` to `color2` between 0% and 20% of the element and then transition to `color3`z for the rest. 
+	*/
+
 }
 
 .bb1-window {
@@ -100,7 +140,7 @@ body {
 .bb2b {
 	width: 100%;
 	height: 100%;
-	background: repeating-linear-gradient(
+	background: repeating-linear-gradient( /*Gradients can use as many colors as you want*/
 			var(--building-color2),
 			var(--building-color2) 6%,
 			var(--window-color2) 6%,
